main.tf

#Deploy VPC with CIDR 10.80.0.0/16
resource "aws_vpc" "customVPC" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true #Enable DNS resolution, hostnames
}

#Deploy IGW and attached to VPC
resource "aws_internet_gateway" "customIGW" {
  vpc_id = aws_vpc.customVPC.id #Attached IGW to VPC

  tags = {
    Name = "Custom-IGW"
  }
}

#Deploy a Route Table ver 3
resource "aws_route_table" "publicRT" {
  vpc_id = aws_vpc.customVPC.id #Attached RT to VPC

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.customIGW.id #Deploy a Route with 0.0.0.0/0 Destination IGW
  }

  tags = {
    Name = "Public-RT"
  }
}

#Deploy 4 Subnets, 2 in each AZ
resource "aws_subnet" "subnet1" {
  vpc_id                  = aws_vpc.customVPC.id
  cidr_block              = var.subnet1_cidr
  availability_zone       = var.az1
  map_public_ip_on_launch = true

  tags = {
    Name = "Subnet-1"
  }
}

resource "aws_subnet" "subnet2" {
  vpc_id                  = aws_vpc.customVPC.id
  cidr_block              = var.subnet2_cidr
  availability_zone       = var.az1
  map_public_ip_on_launch = false

  tags = {
    Name = "Subnet-2"
  }
}

resource "aws_subnet" "subnet3" {
  vpc_id                  = aws_vpc.customVPC.id
  cidr_block              = var.subnet3_cidr
  availability_zone       = var.az2
  map_public_ip_on_launch = true

  tags = {
    Name = "Subnet-3"
  }
}

resource "aws_subnet" "subnet4" {
  vpc_id                  = aws_vpc.customVPC.id
  cidr_block              = var.subnet4_cidr
  availability_zone       = var.az2
  map_public_ip_on_launch = false

  tags = {
    Name = "Subnet-4"
  }
}

#1 subnet from each AZ to Public RT.
resource "aws_route_table_association" "subnet1Assoc" {
  subnet_id      = aws_subnet.subnet1.id
  route_table_id = aws_route_table.publicRT.id
}

resource "aws_route_table_association" "subnet3Assoc" {
  subnet_id      = aws_subnet.subnet3.id
  route_table_id = aws_route_table.publicRT.id
}

#Deploy 1 SG for LoadBalancer port 80, 443 source 0.0.0.0/0
resource "aws_security_group" "lb_sg" {
  name        = var.lb_sg_name
  description = "Security group for Public Application Load Balancer"
  vpc_id      = aws_vpc.customVPC.id # Replace with your vpc_id variable/resource

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "alb-security-group"
  }
}

#Deploy 1 SG for EC2 port 22, 80, 443 source 0.0.0.0/0
resource "aws_security_group" "ec2_sg" {
  name        = var.ec2_sg_name
  description = "Security group for EC2"
  vpc_id      = aws_vpc.customVPC.id # Replace with your vpc_id variable/resource

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "ec2-security-group"
  }
}
